--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -85,6 +85,7 @@ button[type="submit"]:hover {
   background: rgba(0, 0, 0, 0.2);
   box-shadow: 0px 2px 4px -2px rgba(223, 217, 217, 0.4) inset,
     0px 2px 4px 0px rgba(0, 0, 0, 0.2);
+  padding: 4px;
 }
 
 .shoppingcart {
@@ -92,6 +93,7 @@ button[type="submit"]:hover {
   background: rgba(0, 0, 0, 0.2);
   box-shadow: 0px 2px 4px -2px rgba(223, 217, 217, 0.4) inset,
     0px 2px 4px 0px rgba(0, 0, 0, 0.2);
+  padding: 4px;
 }
 
 /* Subheader */
