--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -101,7 +101,7 @@ button[type="submit"]:hover {
 .subHeader {
   display: flex;
   padding: 12px 20px;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   gap: 66px;
   background: #91b599;
@@ -114,6 +114,17 @@ button[type="submit"]:hover {
   font-style: normal;
   font-weight: 400;
   line-height: 22px; /* 157.143% */
+  /* border-right: 1px solid #d9d9d9; */
+}
+
+.subHeader p::after {
+  content: "";
+  background-image: url("../img/basil_arrow-right-outline.png");
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  vertical-align: middle;
+  margin-left: 8px;
 }
 
 /* Section 1 */
